# llnl_data_science_challenge_2026

./: .gitignore  AGENTS.md  README.md  STUDY_NOTES.md  pyproject.toml  requirements.txt
.agents/skills/ct-threshold-optimizer/: SKILL.md
.agents/skills/nde_report_expert/: SKILL.md
.agents/skills/npy-metadata-extractor/: SKILL.md
.agents/skills/volume-metadata/: SKILL.md
.codex/agents/: segmentation_agent.toml  specimen_ingest.toml
analysis/: README.md
analysis/brian_tran_9x9x9_0point5dash1/config/: specimen_manifest.json
analysis/contracts/: specimen_ingest.json
analysis/pacificvis_8x8x8_five_defects/config/: specimen_manifest.json
analysis/schema/: specimen_manifest.schema.json
data/9x9x9_octet_lattice/segmentation/: .gitignore  report.md  (+2 more)
data/pacificvis/: .gitignore  README.md  SHA256SUMS
evals/: result_segmentation_1.json  rubric_segmentation_1.md
notes/: CHALLENGE_NOTES.md  PART2_DESIGN.md
scripts/: apply_data_prep_result.py  ingest_specimen.py  napari_comparing.py  napari_viewer.py  prepare_data_prep_handoff.py  replay_specimen_segmentation.py  validate_specimen_manifests.py
src/: data_prep_handoff.py  mcp_server.py  segmentation_replay.py  specimen_ingest.py  specimen_manifest.py  volume_artifacts.py  volume_metadata.py
src/part2_core/: __init__.py  graph.py  otsu.py  response.py  volume.py
tests/: test_data_prep_handoff.py  test_mcp_artifact_tools.py  test_mcp_volume_metadata.py  test_part2_core.py  test_part2_mcp_tools.py  test_skill_mcp_policy.py  test_specimen_ingest.py  test_specimen_manifest.py  test_volume_metadata.py
(+7 files in other folders)
